--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-SUPABASE_URL=###
-SUPABASE_KEY=###
-OPENROUTER_API_KEY=###
+SUPABASE_URL=
+SUPABASE_KEY=
+OPENROUTER_API_KEY=
+SUPABASE_TEST_URL=
+SUPABASE_PUBLIC_KEY=
+E2E_USERNAME_ID=
+E2E_USERNAME=
+E2E_PASSWORD=
