--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/node": "^9.4.3",
     "@astrojs/react": "^4.3.1",
     "@astrojs/sitemap": "^3.5.1",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.78.0",
@@ -32,6 +33,7 @@
     "lucide-react": "^0.487.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.2.5",
