--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "astro": "astro",
     "test": "vitest",
     "test:unit": "vitest run",
-    "test:e2e": "playwright test --ui",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
