--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,6 +2,9 @@ name: Pull Request CI
 
 on:
   workflow_dispatch: 
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
