--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -106,7 +106,7 @@ jobs:
     name: PR Status Comment
     runs-on: ubuntu-latest
     needs: [lint, unit-test, e2e-test]
-    if: always()
+    if: always() && github.event_name == 'pull_request'
     permissions:
       pull-requests: write
     steps:
